--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
-        "axios": "^1.6.1",
-        "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^1.0.0",
-        "sass": "^1.56.1",
-        "vite": "^5.0.0"
+        "@popperjs/core": "^2.11.8",
+        "axios": "^1.7.3",
+        "bootstrap": "^5.3.3",
+        "laravel-vite-plugin": "^1.0.5",
+        "sass": "^1.77.8",
+        "vite": "^5.4.0"
+    },
+    "dependencies": {
+        "npm-check-updates": "^17.0.6"
     }
 }
