--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.3",
         "phpoffice/phpword": "^1.3",
-        "spatie/laravel-sitemap": "^7.0"
+        "spatie/laravel-sitemap": "^7.0",
+        "ext-intl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
