--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,24 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "intervention/image": "^2.7.0",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.3",
-        "phpoffice/phpword": "^1.3",
-        "spatie/laravel-sitemap": "^7.2.1",
+        "guzzlehttp/guzzle": "^7.9.3",
+        "intervention/image": "^2.7.2",
+        "laravel/framework": "^10.48.29.",
+        "laravel/sanctum": "^3.3.3",
+        "laravel/tinker": "^2.10.1",
+        "laravel/ui": "^4.6.1",
+        "phpoffice/phpword": "^1.3.0",
+        "spatie/laravel-sitemap": "^7.3.4",
         "ext-intl": "*"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "fakerphp/faker": "^1.24.1",
+        "laravel/pint": "^1.22.1",
+        "laravel/sail": "^1.43.1",
+        "mockery/mockery": "^1.6.12",
+        "nunomaduro/collision": "^7.12.0",
+        "phpunit/phpunit": "^10.5.46",
+        "spatie/laravel-ignition": "^2.9.1"
     },
     "autoload": {
         "psr-4": {
