--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-intl": "*",
         "guzzlehttp/guzzle": "^7.9.3",
         "intervention/image": "^2.7.2",
         "laravel/framework": "^10.48.29.",
@@ -13,7 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6.1",
         "spatie/laravel-sitemap": "^7.3.4",
-        "ext-intl": "*"
+        "spatie/pdf-to-text": "^1.54"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24.1",
